# Olynk_Trita-V0.01

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  MISSION.md  MISSION_LOG.md  ORCHESTRATOR.md  PLAN.md  README.md  SCRUTINY.md  VALIDATION.md  render.yaml
trita/apps/api/: README.md  pyproject.toml
trita/apps/api/src/trita_api/: __init__.py  auth.py  crypto.py  db.py  ingest_shopify.py  integration_health.py  llm_budget.py  llm_client.py  llm_drafts.py  main.py  shopify_oauth.py  supabase_auth.py
trita/apps/api/tests/: conftest.py  test_adr001_accepted.py  test_auth_exchange.py  test_causal.py  test_chat.py  test_connectors_rm1.py  test_connectors_rm3.py  test_csv_hub.py  test_decisions.py  test_decisions_inbox.py  test_env_example.py  test_health.py  test_identity_v1.py  test_integration_health.py  test_llm_budget.py  test_llm_draft.py  test_metrics_api.py  test_proactive.py  test_render_blueprint.py  test_reports_api.py  test_shopify_oauth.py  test_shopify_sync.py  test_tenant_from_jwt.py  test_tier2_drafts.py
trita/apps/api/tests/isolation/: test_connector_credentials_migration.py  test_cross_tenant_rls.py  test_rls_migration_contract.py
trita/data/dbt/: README.md  dbt_project.yml  profiles.example.yml  pyproject.toml
trita/data/dbt/models/feat/: schema.yml  sku_metrics_daily.sql  sku_week_matrix.sql
trita/data/dbt/models/gold/: bridge_order_fulfillment.sql  bridge_sku_alias.sql  dim_sku.sql  fact_inventory_daily.sql  fact_order_line.sql  fact_order_line_resolved.sql  fact_payout.sql  fact_shipment.sql  schema.yml  sku_unit_cost.sql
trita/data/dbt/models/quarantine/: csv_hub_invalid.sql  shopify_invalid.sql
trita/data/dbt/models/staging/: schema.yml  sources.yml  stg_csv_hub_order_lines.sql  stg_csv_hub_unit_cost.sql  stg_delhivery_shipments.sql  stg_google_ads_daily.sql  stg_meta_ads_daily.sql  stg_razorpay_payouts.sql  stg_shiprocket_shipments.sql  stg_shopify_inventory.sql  (+5 more)
trita/data/dbt/profiles/: .user.yml  profiles.yml
trita/data/dbt/tests/: test_dbt_contract.py  test_va05_yoga_bar.py
trita/data/dlt/: README.md  pyproject.toml
trita/data/dlt/tests/: test_envelope.py  test_raw_migration_contract.py  test_shopify_idempotency.py  test_shopify_pipeline.py
trita/data/orchestration/: README.md  pyproject.toml  workspace.yaml
trita/data/orchestration/tests/: test_daily_shell_defs.py  test_va09_integration.py
(+267 files in other folders)
