[project]
name = "trita-api"
version = "0.0.1"
description = "Trita FastAPI service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyjwt>=2.9.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "psycopg[binary]>=3.2.0",
    "PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trita_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
