[project]
name = "trita-dbt"
version = "0.0.1"
description = "Trita dbt — staging → gold (F-GRAPH-SHELL)"
requires-python = ">=3.11"
dependencies = [
    "dbt-core==1.8.2",
    "dbt-postgres==1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
