[project]
name = "trita-dlt"
version = "0.0.1"
description = "Trita dlt ingest — raw envelope + connector taps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=0.5.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trita_dlt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
