[project]
name = "trita-orchestration"
version = "0.0.1"
description = "Trita Dagster orchestration — ADR-001 (P-ORCH-DAILY-SHELL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.8.0,<2",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trita_orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
